--- a/Muslim Quiz/Modules/Home/HomeViewController.xib
+++ b/Muslim Quiz/Modules/Home/HomeViewController.xib
@@ -21,16 +21,6 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kdz-ln-M8a">
-                    <rect key="frame" x="0.0" y="70" width="375" height="597"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XEc-Cq-A0B">
-                        <size key="itemSize" width="50" height="50"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DI3-eE-Xvm">
                     <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                     <constraints>
@@ -41,19 +31,42 @@
                         <action selector="startGame:" destination="-1" eventType="touchUpInside" id="nFm-Xq-M2C"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ay9-wG-ScK">
+                    <rect key="frame" x="0.0" y="70" width="375" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="p3l-kn-iai"/>
+                    </constraints>
+                    <state key="normal" title="Выйти"/>
+                    <connections>
+                        <action selector="signOut:" destination="-1" eventType="touchUpInside" id="kEg-1Z-8h7"/>
+                    </connections>
+                </button>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kdz-ln-M8a">
+                    <rect key="frame" x="0.0" y="128" width="375" height="539"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XEc-Cq-A0B">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="Ay9-wG-ScK" firstAttribute="top" secondItem="DI3-eE-Xvm" secondAttribute="bottom" id="4CC-0N-Jw2"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kdz-ln-M8a" secondAttribute="trailing" id="8qV-3F-Z3u"/>
                 <constraint firstItem="DI3-eE-Xvm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="BFO-K7-tKU"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Ay9-wG-ScK" secondAttribute="trailing" id="BJu-kA-vRV"/>
+                <constraint firstItem="Ay9-wG-ScK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Im3-t7-9BG"/>
                 <constraint firstItem="DI3-eE-Xvm" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="NKd-f4-3Jb"/>
-                <constraint firstItem="kdz-ln-M8a" firstAttribute="top" secondItem="DI3-eE-Xvm" secondAttribute="bottom" id="U2t-W3-x3B"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="DI3-eE-Xvm" secondAttribute="trailing" id="bDc-Rg-9yg"/>
                 <constraint firstItem="kdz-ln-M8a" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="bYI-Mq-JIu"/>
+                <constraint firstItem="kdz-ln-M8a" firstAttribute="top" secondItem="Ay9-wG-ScK" secondAttribute="bottom" constant="8" id="dDn-8B-Nw5"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="kdz-ln-M8a" secondAttribute="bottom" id="sgs-s1-FW3"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="130.40000000000001" y="153.37331334332833"/>
+            <point key="canvasLocation" x="130.40000000000001" y="152.47376311844079"/>
         </view>
     </objects>
 </document>
